--- a/Src/FistEXE/FistEXE.vcxproj.filters
+++ b/Src/FistEXE/FistEXE.vcxproj.filters
@@ -7,12 +7,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="pch.h" />
-    <ClInclude Include="hook_mouse_callback.hpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="pch.cpp" />
-    <ClCompile Include="dllmain.cpp" />
-    <ClCompile Include="hook_mouse_callback.cpp" />
+    <ClCompile Include="FistEXE.cpp" />
   </ItemGroup>
 </Project>
