DLL Injector 프로젝트 속성 변경 및 오류 수정,
프로젝트 속성 변경 : DebugMT -> ReleaseMT 로 수정,
작성 시 생긴 오타 및 오류 수정 완료.

빌드 성공 확인하였음. {(victim system-win7,32bit)에서 컴파일 및 실행 테스트 필요함.}

테스트 DLL 파일 (zwCreateFile_Hooker.dll) 작성, dll_injector에서 exploror.exe로 인젝션 하게끔 작성 완료..

자세한 사항은 노션에서 확인!!!

--- a/Src/DLL_Injector/DLL_Injector.vcxproj
+++ b/Src/DLL_Injector/DLL_Injector.vcxproj
@@ -77,6 +77,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <OutDir>../../Build/$(Platform)$(Configuration)\</OutDir>
+    <IntDir>../../Output/$(Platform)$(Configuration)/$(ProjectName)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
@@ -106,6 +108,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
