--- a/Src/myhook/myhook.vcxproj
+++ b/Src/myhook/myhook.vcxproj
@@ -167,6 +167,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="createprocessw.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
