--- a/Src/detected/detected.vcxproj.filters
+++ b/Src/detected/detected.vcxproj.filters
@@ -7,9 +7,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="stdafx.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="detected.cpp" />
   </ItemGroup>
 </Project>
