--- a/Src/detected/detected.vcxproj
+++ b/Src/detected/detected.vcxproj
@@ -157,6 +157,10 @@
   <ItemGroup>
     <ClCompile Include="detected.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="stdafx.h" />
+    <ClInclude Include="targetver.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
