--- a/Src/myhook/myhook.vcxproj
+++ b/Src/myhook/myhook.vcxproj
@@ -167,7 +167,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="file.h" />
+    <ClInclude Include="NewCreateFile.h" />
+    <ClInclude Include="process.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
