resource and misc and sychronization  후킹(#22)
* resource 후킹
* misc 후킹 
* sychronization. 후킹

--- a/Src/myhook/myhook.vcxproj.filters
+++ b/Src/myhook/myhook.vcxproj.filters
@@ -11,6 +11,9 @@
     <ClInclude Include="exception.h" />
     <ClInclude Include="system.h" />
     <ClInclude Include="file.h" />
+    <ClInclude Include="misc.h" />
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="synchronisation.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
