--- a/Src/myhook/myhook.vcxproj
+++ b/Src/myhook/myhook.vcxproj
@@ -169,7 +169,10 @@
   <ItemGroup>
     <ClInclude Include="exception.h" />
     <ClInclude Include="file.h" />
+    <ClInclude Include="misc.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="synchronisation.h" />
     <ClInclude Include="system.h" />
   </ItemGroup>
   <ItemGroup>
