--- a/Src/Detector/detected.vcxproj.filters
+++ b/Src/Detector/detected.vcxproj.filters
@@ -12,5 +12,6 @@
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="APIset.h" />
   </ItemGroup>
 </Project>
