--- a/Src/myhook/myhook.vcxproj
+++ b/Src/myhook/myhook.vcxproj
@@ -171,6 +171,7 @@
     <ClInclude Include="exception.h" />
     <ClInclude Include="file.h" />
     <ClInclude Include="misc.h" />
+    <ClInclude Include="registery.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="synchronisation.h" />
