--- a/Src/myhook/myhook.vcxproj
+++ b/Src/myhook/myhook.vcxproj
@@ -167,6 +167,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="etc.h" />
     <ClInclude Include="process.h" />
     <ClInclude Include="exception.h" />
     <ClInclude Include="file.h" />
