--- a/Src/myhook/myhook.vcxproj.filters
+++ b/Src/myhook/myhook.vcxproj.filters
@@ -15,6 +15,8 @@
     <ClInclude Include="misc.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="synchronisation.h" />
+    <ClInclude Include="registery.h" />
+    <ClInclude Include="etc.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
