한글 가능한 거 이것도 깨지면 그냥 zip으로 드라이브에 올려놓을게

--- a/Src/Detector/detected.vcxproj.filters
+++ b/Src/Detector/detected.vcxproj.filters
@@ -12,5 +12,6 @@
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Scenarios.h" />
   </ItemGroup>
 </Project>
