--- a/Src/Detector/detected.vcxproj
+++ b/Src/Detector/detected.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="detected.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Scenarios.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
