--- a/Src/Injector/InjectedDll.vcxproj
+++ b/Src/Injector/InjectedDll.vcxproj
@@ -156,7 +156,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="InjectedDll.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
